# prefect-gcloud-examples

./: .gitignore  README.md
.circleci/: config.yml
k8s/prefect-agent/base/: cluster_role.yaml  deployment.yaml  kustomization.yaml  rbac.yaml  upstream.sh  upstream.yaml  values.yaml
k8s/prefect-agent/overlays/demo/: deployment.yaml  kustomization.yaml  service_account.yaml
prefect-flows/: Dockerfile  pyproject.toml
prefect-flows/prefect_flows/: cli.py  demo.py
prefect-flows/prefect_flows/flows/: __init__.py  demo.py
prefect-flows/prefect_flows/templates/: kustomize.yaml  patch.yaml
prefect-flows/prefect_flows/utils/: flow_group.py
prefect-utils/: pyproject.toml
prefect-utils/prefect_utils/: cli.py
prefect-utils/prefect_utils/deploy/: manifest.py
prefect-utils/prefect_utils/registry/: __init__.py  decorators.py  flow_registry.py
terraform/envs/dev/gke/: main.tf  variables.tf
terraform/envs/dev/prefect/: main.tf  variables.tf
terraform/envs/dev/project/: locals.tf  main.tf  main.tf.bootstrap  outputs.tf  providers.tf  remote.tf  variables.tf
terraform/envs/dev/vpc/: main.tf  outputs.tf  variables.tf
terraform/modules/gke/: main.tf  variables.tf
terraform/modules/prefect/: main.tf  variables.tf
terraform/modules/project/: locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  variables.tf
