[tool.poetry]
name = "prefect-flows"
version = "0.1.0"
description = ""
authors = ["Alix Cook <alix.cook11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.7.9"
click = "^8.1.3"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
