[tool.poetry]
name = "prefect-utils"
version = "0.2.0"
description = ""
authors = ["Alix Cook <alix.cook11@gmail.com>"]
readme = "README.md"
packages = [{include = "prefect_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.10.16"
datadog = "^0.45.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prefect-util = 'prefect_utils.cli:run'